# tts_webui_extension.rvc

./: .gitignore  README.md  pyproject.toml  setup.py
extension_rvc/: download_uvr5.py  get_and_load_hubert.py  hide_argv.py  main.py  rvc_tab.py  uvr5_tab.py
extension_rvc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tts_webui_extension/rvc/: infer_rvc.py  main.py  rvc_tab.py  uvr5_tab.py
